syntax = "proto3";

option csharp_namespace = "OrderQueue.API.Protos";

package kitchen_orders;

service KitchenOrders {
	rpc GetKitchenOrders (GetKitchenOrdersRequest) returns (GetKitchenOrdersResponse);
	rpc GetKitchenOrder (GetKitchenOrderRequest) returns (GetKitchenOrderResponse);
	rpc SetNewOrderState (SetNewOrderStateRequest) returns (SetNewOrderStateResponse);
}

message KitchenOrder {
	string id = 1;
	string order_id = 2;
	KitchenStatus status = 3;
	string create_date = 4;
}

enum KitchenStatus {
	KITCHEN_STATUS_WAIT = 0;
    KITCHEN_STATUS_COOKING = 1;
    KITCHEN_STATUS_READY_TO_SERVE = 2;
	KITCHEN_STATUS_SERVED = 3;
}

message GetKitchenOrdersRequest {
}

message GetKitchenOrdersResponse {
	repeated KitchenOrder kitchen_orders = 1;
}

message GetKitchenOrderRequest {
	string id = 1;
}

message GetKitchenOrderResponse {
	KitchenOrder kitchen_order = 1;
}

message SetNewOrderStateRequest {
	string id = 1;
	KitchenStatus status = 2;
}

message SetNewOrderStateResponse {
	KitchenOrder kitchen_order = 1;
}